tests/positive/basic/log_exp/input.ci
void main() {
    print(toString(log2(8.0)) + "\n");
    print(toString(exp(log(8.0))) + "\n");
}
