tests/negative/semantic/wrong_arg_count_epochtoday/input.ci
void main() {
    print(toString(epochToDay()) + "\n");
}
